test/spec/table.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/table.wast
(;; STDOUT ;;;
out/test/spec/table.wast:14: assert_invalid passed:
  out/test/spec/table/table.9.wasm:000000c: error: table variable out of range: 0 (max 0)
  000000c: error: BeginElemSegment callback failed
out/test/spec/table.wast:15: assert_invalid passed:
  out/test/spec/table/table.10.wasm:0000016: error: table variable out of range: 0 (max 0)
  0000016: error: BeginElemSegment callback failed
out/test/spec/table.wast:19: assert_invalid passed:
  out/test/spec/table/table.11.wasm:000000f: error: max elems (0) must be >= initial elems (1)
  000000f: error: OnTable callback failed
out/test/spec/table.wast:23: assert_invalid passed:
  out/test/spec/table/table.12.wasm:0000013: error: max elems (0) must be >= initial elems (4294967295)
  0000013: error: OnTable callback failed
out/test/spec/table.wast:28: assert_malformed passed:
  out/test/spec/table/table.13.wat:1:8: error: invalid int "0x1_0000_0000"
  (table 0x1_0000_0000 funcref)
         ^^^^^^^^^^^^^
out/test/spec/table.wast:32: assert_malformed passed:
  out/test/spec/table/table.14.wat:1:8: error: invalid int "0x1_0000_0000"
  (table 0x1_0000_0000 0x1_0000_0000 funcref)
         ^^^^^^^^^^^^^
  out/test/spec/table/table.14.wat:1:22: error: invalid int "0x1_0000_0000"
  (table 0x1_0000_0000 0x1_0000_0000 funcref)
                       ^^^^^^^^^^^^^
out/test/spec/table.wast:36: assert_malformed passed:
  out/test/spec/table/table.15.wat:1:10: error: invalid int "0x1_0000_0000"
  (table 0 0x1_0000_0000 funcref)
           ^^^^^^^^^^^^^
out/test/spec/table.wast:43: assert_malformed passed:
  out/test/spec/table/table.16.wat:1:24: error: redefinition of table "$foo"
  (table $foo 1 funcref)(table $foo 1 funcref)
                         ^^^^^
out/test/spec/table.wast:47: assert_malformed passed:
  out/test/spec/table/table.17.wat:1:39: error: redefinition of table "$foo"
  (import "" "" (table $foo 1 funcref))(table $foo 1 funcref)
                                        ^^^^^
out/test/spec/table.wast:51: assert_malformed passed:
  out/test/spec/table/table.18.wat:1:39: error: redefinition of table "$foo"
  (import "" "" (table $foo 1 funcref))(import "" "" (table $foo 1 funcref))
                                        ^^^^^^
19/19 tests passed.
;;; STDOUT ;;)
